--- a/solutions.html
+++ b/solutions.html
@@ -571,10 +571,10 @@
                 alert("Please Enter Your Mail Address!");
             } else {
                 Email.send({
-                    //SecureToken: '6c155a40-8359-4759-a0f4-7258ad1b3696',
-                    Host: "smtp.africasoftwarearchitects.com",
-                    Username: "asa@africasoftwarearchitects.com",
-                    Password: "A5a2018$100pc",
+                    SecureToken: 'e09e5ad2-5ae4-48b3-ab2c-f53a985e7fd9',
+                    //Host: "smtp.africasoftwarearchitects.com",
+                    //Username: "asa@africasoftwarearchitects.com",
+                    //Password: "A5a2018$100pc",
                     To: 'asa@africasoftwarearchitects.com',
                     From: email,
                     Subject: "client - " + email,
