Added some content text changes

--- a/partners.html
+++ b/partners.html
@@ -104,13 +104,14 @@
                     <div class="col-lg-6 col-md-10">
                         <div class="wcu-text">
                             <div class="section-title left-border mb-40">
-                                <span class="title-tag">Partners</span>
-                                <h2 class="title">Why Choose Us As <br> Business Solution/Service Provider</h2>
+                                <span class="title-tag">Our Ecosystem Partners</span>
+                                <h1 class="title" style="color:white;font-weight:bold;font-size:12pt ">We partner with a vast set of leading ecosystem partners to help push the boundaries of what technology can enable for your business.</h1>
                             </div>
                             <p>
                                 ASA has partnered with global leading firms to enable digital transformation in South Africa, Africa and beyond. Our partner network provides us with the technology to enhance ASA offerings which result in more comprehensive digital transformation solutions. Our joint objective and mutual investments help our customers harness the power of technology to transform businesses.
 
                             </p>
+                            <!--
                             <ul class="wcu-list">
                                 <li>
                                     <i class="far fa-check-circle"></i> Specialist Company Advisor Team
@@ -123,6 +124,7 @@
                                     <i class="far fa-check-circle"></i> Can Data Visualization Improve Mobile
                                 </li>
                             </ul>
+                        -->
                         </div>
                     </div>
                 </div>
