--- a/services.html
+++ b/services.html
@@ -95,7 +95,7 @@
         <div class="container">
             <div class="section-title text-center both-border mb-50">
                 <span class="title-tag"> Services </span>
-                <h2 class="title">We Are Specialist For Many <br> Business Services</h2>
+                <h6 class="">ASA is well trusted service provider offering application development lifecycle related services to ensure a shorter time-to-market deployment period for software and solutions of our clients</h6>
             </div>
             <br />
             <div class="row align-items-center justify-content-center">
