--- a/solutions.html
+++ b/solutions.html
@@ -96,7 +96,7 @@
         <div class="container">
             <div class="section-title text-center both-border mb-50">
                 <span class="title-tag"> Solutions </span>
-                <h2 class="title">We Are Specialist For Many <br> Business Solutions</h2>
+                <h6 class="">We have rich portfolio of solutions that we offer</h6>
             </div>
             <br />
             <div class="row align-items-center justify-content-center">
@@ -350,7 +350,7 @@
                 <div class="col-lg-6 col-md-10 offset-lg-5">
                     <div class="section-title left-border">
                         <span class="title-tag">Clients Feedback</span>
-                        <h2 class="title">We Have An Proven <br> Testimonials </h2>
+                        <h2 class="title">Client Testimonials </h2>
                     </div>
                     <div class="testimonial-items" id="testimonialSliderOne">
                         <div class="testimonial-item">
@@ -359,11 +359,7 @@
                                     <span class="quote-top">
                                         <i class="fas fa-quote-left"></i>
                                     </span>
-                                    On the other hand we denounce with righteou indg ation and dislike men who are so
-                                    beguiled and demoraliz ed by the charms of pleasure of the moment
-                                    <br>
-                                    Dislike men who are so beguiled and demoraliz worlds ed by the charms of pleasure of
-                                    the moment
+                                    Due to the nature of some of our work, some clients prefer to remain anonymous of their relationship with them. For any client testimonials, feel free to contact us and we will gladly provide you with  some latest references from our pool of clients
                                     <span class="quote-bottom">
                                         <i class="fas fa-quote-right"></i>
                                     </span>
@@ -375,8 +371,8 @@
                                     <img src="assets/img/testimonial/author.png" alt="img">
                                 </div>
                                 <div class="desc">
-                                    <h4>Richard E. Harrisona</h4>
-                                    <span>CEO & Founder</span>
+                                   <!-- <h4>Richard E. Harrisona</h4>
+                                    <span>CEO & Founder</span> -->
                                 </div>
                             </div>
                         </div>
