--- a/index.html
+++ b/index.html
@@ -664,10 +664,10 @@ At ASA, we assist our clients to think strategically about desired business outc
                         <div class="widget contact-widget">
                             <h4 class="widget-title">Quick Links</h4>
                             <ul class="contact-infos">
-                                <li><a href="#"><i class="fa fa-home"></i>Home</a></li>
-                                <li><a href="#"><i class="fa fa-check"></i>Jobs</a></li>
-                                <li><a href="#"><i class="fa fa-bars"></i>Information</a></li>
-                                <li><a href="#"><i class="fa fa-user-plus"></i>Partnership</a></li>
+                                <li><a href="index.html"><i class="fa fa-home"></i>Home</a></li>
+                                <li><a href="founder.html"><i class="fa fa-check"></i>Jobs</a></li>
+                                <li><a href="whoweare.html"><i class="fa fa-bars"></i>Information</a></li>
+                                <li><a href="partners.html"><i class="fa fa-user-plus"></i>Partnership</a></li>
                                 <li><a href="#"><i class="fa fa-file"></i>Press Info</a></li>
                             </ul>
                         </div>
