--- a/partners.html
+++ b/partners.html
@@ -59,6 +59,14 @@
                             <ul>
                                 <li><a href="index.html">Home</a></li>
                                 <li><a href="whoweare.html">Who We Are</a></li>
+                                <!--<li class="has-submemu">
+                                    <a href="index.html">Who We Are</a>
+                                    <ul class="submenu">
+                                        <li><a href="whoweare.html">Corporate Vision</a></li>
+                                        <li><a href="whoweare.html">Corporate Mission</a> </li>
+                                        <li><a href="whoweare.html">Corporate Values</a></li>
+                                    </ul>
+                                </li>-->
                                 <li><a href="solutions.html">Solutions</a></li>
 
                                 <li><a href="services.html">Services</a></li>
@@ -91,6 +99,7 @@
     </header>
     <!--====== Header part end ======-->
     <!--====== Why Choose Us Part Start ======-->
+    <br />
     <section class="wcu-section box-style">
         <div class="container">
             <div class="wcu-inner">
@@ -104,27 +113,29 @@
                     <div class="col-lg-6 col-md-10">
                         <div class="wcu-text">
                             <div class="section-title left-border mb-40">
-                                <span class="title-tag">Our Ecosystem Partners</span>
-                                <h1 class="title" style="color:white;font-weight:bold;font-size:12pt ">We partner with a vast set of leading ecosystem partners to help push the boundaries of what technology can enable for your business.</h1>
+                                <span class="title-tag">Our Ecosystem Partners</span><br />
+                                <!--<h1 class="title" style="color:white;font-weight:bold;font-size:12pt ">We partner with a vast set of leading ecosystem partners to help push the boundaries of what technology can enable for your business.</h1>-->
+
                             </div>
+                            <p style="color:#ffffff">We partner with a vast set of leading ecosystem partners to help push the boundaries of what technology can enable for your business.</p><br />
                             <p>
                                 ASA has partnered with global leading firms to enable digital transformation in South Africa, Africa and beyond. Our partner network provides us with the technology to enhance ASA offerings which result in more comprehensive digital transformation solutions. Our joint objective and mutual investments help our customers harness the power of technology to transform businesses.
 
                             </p>
                             <!--
-                            <ul class="wcu-list">
-                                <li>
-                                    <i class="far fa-check-circle"></i> Specialist Company Advisor Team
-                                </li>
-                                <li>
-                                    <i class="far fa-check-circle"></i> Understanding Machines OpenStandard
+                                <ul class="wcu-list">
+                                    <li>
+                                        <i class="far fa-check-circle"></i> Specialist Company Advisor Team
+                                    </li>
+                                    <li>
+                                        <i class="far fa-check-circle"></i> Understanding Machines OpenStandard
 
-                                </li>
-                                <li>
-                                    <i class="far fa-check-circle"></i> Can Data Visualization Improve Mobile
-                                </li>
-                            </ul>
-                        -->
+                                    </li>
+                                    <li>
+                                        <i class="far fa-check-circle"></i> Can Data Visualization Improve Mobile
+                                    </li>
+                                </ul>
+                            -->
                         </div>
                     </div>
                 </div>
@@ -339,10 +350,10 @@
                         <div class="widget contact-widget">
                             <h4 class="widget-title">Quick Links</h4>
                             <ul class="contact-infos">
-                                <li><a href="#"><i class="fa fa-home"></i>Home</a></li>
-                                <li><a href="#"><i class="fa fa-check"></i>Jobs</a></li>
-                                <li><a href="#"><i class="fa fa-bars"></i>Information</a></li>
-                                <li><a href="#"><i class="fa fa-user-plus"></i>Partnership</a></li>
+                                <li><a href="index.html"><i class="fa fa-home"></i>Home</a></li>
+                                <li><a href="founder.html"><i class="fa fa-check"></i>Jobs</a></li>
+                                <li><a href="whoweare.html"><i class="fa fa-bars"></i>Information</a></li>
+                                <li><a href="partners.html"><i class="fa fa-user-plus"></i>Partnership</a></li>
                                 <li><a href="#"><i class="fa fa-file"></i>Press Info</a></li>
                             </ul>
                         </div>
