--- a/whoweare.html
+++ b/whoweare.html
@@ -156,25 +156,25 @@
                             <div class="chart" data-percent="85">
                                 <i class="flaticon-presentation"></i>
                             </div>
-                            <h4 class="title">Business Strategy</h4>
+                            <h4 class="title">Off-The-Shelf Software</h4>
                         </div>
                         <div class="chart-box">
                             <div class="chart" data-percent="75">
                                 <i class="flaticon-money-bags"></i>
                             </div>
-                            <h4 class="title">Financial Planing</h4>
+                            <h4 class="title">Digital Transformation Advisory</h4>
                         </div>
                         <div class="chart-box">
                             <div class="chart" data-percent="75">
                                 <i class="flaticon-invest"></i>
                             </div>
-                            <h4 class="title">Marketing Startegy</h4>
+                            <h4 class="title">Application Development Cycle Services</h4>
                         </div>
                         <div class="chart-box">
                             <div class="chart" data-percent="80">
                                 <i class="flaticon-connector"></i>
                             </div>
-                            <h4 class="title">Relationship Buildup</h4>
+                            <h4 class="title">Cloud Solutions & Cloud Services</h4>
                         </div>
                     </div>
                 </div>
