--- a/services.html
+++ b/services.html
@@ -118,7 +118,7 @@
             <br />
             <div class="row align-items-center justify-content-center">
                 <div class="col-lg-4 col-md-10">
-                    <img src="assets/img/services/mad.png" alt="img">
+                    <img src="assets/img/services/mad.PNG" alt="img">
                 </div>
                 <div class="col-lg-8 col-sm-6">
                     <div class="skill-text">
@@ -189,14 +189,14 @@
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-10">
-                    <img src="assets/img/services/rp.png" alt="img">
+                    <img src="assets/img/services/rp.PNG" alt="img">
                 </div>
             </div>
             <br />
             <br />
             <div class="row align-items-center justify-content-center">
                 <div class="col-lg-4 col-md-10">
-                    <img src="assets/img/services/st.png" alt="img">
+                    <img src="assets/img/services/st.PNG" alt="img">
                 </div>
                 <div class="col-lg-8 col-sm-6">
                     <div class="skill-text">
@@ -226,14 +226,14 @@
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-10">
-                    <img src="assets/img/services/pt.png" alt="img">
+                    <img src="assets/img/services/pt.PNG" alt="img">
                 </div>
             </div>
             <br />
             <br />
             <div class="row align-items-center justify-content-center">
                 <div class="col-lg-4 col-md-10">
-                    <img src="assets/img/services/at.png" alt="img">
+                    <img src="assets/img/services/at.PNG" alt="img">
                 </div>
                 <div class="col-lg-8 col-sm-6">
                     <div class="skill-text">
@@ -263,7 +263,7 @@
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-10">
-                    <img src="assets/img/services/dt.png" alt="img">
+                    <img src="assets/img/services/dt.PNG" alt="img">
                 </div>
             </div>
             <br />
@@ -302,14 +302,14 @@
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-10">
-                    <img src="assets/img/services/wd.png" alt="img">
+                    <img src="assets/img/services/wd.PNG" alt="img">
                 </div>
             </div>
             <br />
             <br />
             <div class="row align-items-center justify-content-center">
                 <div class="col-lg-4 col-md-10">
-                    <img src="assets/img/services/ai.png" alt="img">
+                    <img src="assets/img/services/ai.PNG" alt="img">
                 </div>
                 <div class="col-lg-8 col-sm-6">
                     <div class="skill-text">
