--- a/solutions.html
+++ b/solutions.html
@@ -152,7 +152,7 @@
             <br />
             <div class="row align-items-center justify-content-center">
                 <div class="col-lg-4 col-md-10">
-                    <img src="assets/img/solutions/l.png" alt="img">
+                    <img src="assets/img/solutions/l.PNG" alt="img">
                 </div>
                 <div class="col-lg-8 col-sm-6">
                     <div class="skill-text">
@@ -180,13 +180,13 @@
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-10">
-                    <img src="assets/img/solutions/h.png" alt="img">
+                    <img src="assets/img/solutions/h.PNG" alt="img">
                 </div>
             </div>
             <br />
             <div class="row align-items-center justify-content-center">
                 <div class="col-lg-4 col-md-10">
-                    <img src="assets/img/solutions/p.png" alt="img">
+                    <img src="assets/img/solutions/p.PNG" alt="img">
                 </div>
                 <div class="col-lg-8 col-sm-6">
                     <div class="skill-text">
@@ -221,7 +221,7 @@
             <br />
             <div class="row align-items-center justify-content-center">
                 <div class="col-lg-4 col-md-10">
-                    <img src="assets/img/solutions/r.png" alt="img">
+                    <img src="assets/img/solutions/r.PNG" alt="img">
                 </div>
                 <div class="col-lg-8 col-sm-6">
                     <div class="skill-text">
@@ -255,7 +255,7 @@
             <br />
             <div class="row align-items-center justify-content-center">
                 <div class="col-lg-4 col-md-10">
-                    <img src="assets/img/solutions/er.png" alt="img">
+                    <img src="assets/img/solutions/er.PNG" alt="img">
                 </div>
                 <div class="col-lg-8 col-sm-6">
                     <div class="skill-text">
@@ -284,13 +284,13 @@
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-10">
-                    <img src="assets/img/solutions/s.png" alt="img">
+                    <img src="assets/img/solutions/s.PNG" alt="img">
                 </div>
             </div>
             <br />
             <div class="row align-items-center justify-content-center">
                 <div class="col-lg-4 col-md-10">
-                    <img src="assets/img/solutions/o.png" alt="img">
+                    <img src="assets/img/solutions/o.PNG" alt="img">
                 </div>
                 <div class="col-lg-8 col-sm-6">
                     <div class="skill-text">
@@ -318,13 +318,13 @@
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-10">
-                    <img src="assets/img/solutions/u.png" alt="img">
+                    <img src="assets/img/solutions/u.PNG" alt="img">
                 </div>
             </div>
             <br />
             <div class="row align-items-center justify-content-center">
                 <div class="col-lg-4 col-md-10">
-                    <img src="assets/img/solutions/lr.png" alt="img">
+                    <img src="assets/img/solutions/lr.PNG" alt="img">
                 </div>
                 <div class="col-lg-8 col-sm-6">
                     <div class="skill-text">
