--- a/founder.html
+++ b/founder.html
@@ -130,6 +130,18 @@
         <div class="container">
             <div class="section-title text-center both-border mb-10">
                 <h2 class="title"> Vacancies </h2>
+                <p></p>
+                <p>
+                    <h6 class=""> Vacancies 
+                    We are continuously looking out for intermediate and senior extra ordinary minds who:
+                    are curious and challenge the status quo;
+                    are experts at doing their work, who can design and implement;
+                    are competitive, self-directed and strive to be the best;
+                    are innovative and collaborative
+
+                     We are recruiting for the positions listed below:
+                    </h2>
+                </p>
             </div>
             <!-- Feature boxes -->
             <div class="feature-boxes row justify-content-center">
@@ -142,13 +154,13 @@
                             <!--<span class="title-tag"><i class="fa fa-quote-right"></i></span>-->
                         </div>
                         <p style="text-align:left">
-                            Software Architects<br />
+                         <!--   Software Architects<br />
                             Solutions Architects<br />
                             .Net Developers<br />
                             Java Developers<br />
                             AngularJS Developers<br />
                             Python Developers<br />
-                            Android Mobile Developers<br />
+                            Android & IOS Mobile Developers<br />
                             Cloud/DevOps Engineers<br />
                             Business Intelligence Developers<br />
                             Robotics Process Automation(RPA) analysts<br />
@@ -157,13 +169,35 @@
                             Automation Testers<br />
                             Artificial Intelligence experts<br />
                             Business Analysts<br />
-                            Scrum Master<br />
+                            Scrum Master<br /> -->
+
+                             <ul class="about-list">
+                            <li> <i class="far fa-check"></i> Software Architects</li>
+                           <li> <i class="far fa-check"></i> Solutions Architects</li>
+                           <li> <i class="far fa-check"></i> .Net Developers</li>
+                           <li> <i class="far fa-check"></i> Java Developers</li>
+                           <li> <i class="far fa-check"></i> AngularJS Developers</li>
+                           <li> <i class="far fa-check"></i> Python Developers</li>
+                           <li> <i class="far fa-check"></i> Android & IOS Mobile Developers</li>
+                           <li> <i class="far fa-check"></i> Cloud/DevOps Engineers</li>
+                           <li> <i class="far fa-check"></i> Business Intelligence Developers</li>
+                            <li> <i class="far fa-check"></i> RPA analysts</li>
+                            <li> <i class="far fa-check"></i> RPA Developers</li>
+                             <li> <i class="far fa-check"></i> Big Data Sepcialists</li>
+                            <li> <i class="far fa-check"></i> Test Analysts</li>
+                            <li> <i class="far fa-check"></i> Automation Testers</li>
+                            <li> <i class="far fa-check"></i> Artificial Intelligence experts</li>
+                            <li> <i class="far fa-check"></i> Business Analysts</li>
+                            <li> <i class="far fa-check"></i> Scrum Masters</li>
+
+                        </ul>
                         </p>
                     </div>
                 </div>
                 <div class="row col-12">
+                    <p></p>
                     <p>
-                        If you meet any of the above, please drop us your CV and skills matrix to the <br />  <a href="mailto:info@africasoftwarearchitects.com">
+                        If you meet any of the above, please drop us your CV and skills matrix to the email below:<br />  <a href="mailto:info@africasoftwarearchitects.com">
                             <i class="far fa-envelope-open"></i>
                             recruitment@africasoftwarearchitects.com
                         </a>
@@ -185,7 +219,7 @@
                                 <img src="assets/img/ASA_LogoFinal-01.png" alt="ASA">
                             </div>
                             <p>
-                                Africa Software Architects (ASA), is a software, software development and digital transformation company that seeks to offer software solutions which will disrupt and automate the way organizations do business.
+                                Africa Software Architects (ASA), specializes in software, software development and digital transformation and it is a company that seeks to offer software solutions which will disrupt and automate the way organizations do business.
                                 The business firm is based in Sandton, South Africa. Our business helps to foster digital transformation to clients.
                             </p>
                         </div>
@@ -227,7 +261,7 @@
                                 <li>
                                     <a href="tel:+0123456789">
                                         <i class="far fa-phone"></i>
-                                        +27(11)202-5135
+                                        +27-(0)11-202-5135
                                     </a>
                                 </li>
                                 <li>
@@ -258,7 +292,7 @@
             <div class="footer-copyright">
                 <p class="copyright-text">
                     <span>Copyright@ <a href="#">Africa Software Architects </a> All Rights Reserved 2018</span>
-                    <span>Powerded By Dicol</span>
+                    <span></span>
                 </p>
                 <a href="#" class="back-to-top"><i class="far fa-angle-up"></i></a>
             </div>
