--- a/index.html
+++ b/index.html
@@ -638,7 +638,7 @@ At ASA, we assist our clients to think strategically about desired business outc
                                 <img src="assets/img/ASA_LogoFinal-01.png" alt="ASA">
                             </div>
                             <p>
-                                Africa Software Architects (ASA), is a software, software development and digital transformation company that seeks to offer software solutions which will disrupt and automate the way organizations do business.
+                                Africa Software Architects (ASA), specializes in software, software development and digital transformation and it is a company that seeks to offer software solutions which will disrupt and automate the way organizations do business.
                                 The business firm is based in Sandton, South Africa. Our business helps to foster digital transformation to clients.
                             </p>
                         </div>
