--- a/partners.html
+++ b/partners.html
@@ -179,11 +179,11 @@
                 <div class="p-3 col-12 col-md-6 col-lg-4">
                     <div class="client-wrapper">
                         <div class="wrap-img">
-                            <img src="assets/img/clients/03A.jpg" class="img-responsive clients-img">
+                            <img src="assets/img/clients/03A.png" class="img-responsive clients-img">
                         </div>
                         <div class="card-box">
                             <h3 class="client-name mbr-fonts-style display-5" style="color: #716f6f !important">
-                                KasperSky
+                                Oracle
                             </h3>
 
                         </div>
@@ -324,7 +324,7 @@
                                 <img src="assets/img/ASA_LogoFinal-01.png" alt="ASA">
                             </div>
                             <p>
-                                Africa Software Architects (ASA), is a software, software development and digital transformation company that seeks to offer software solutions which will disrupt and automate the way organizations do business.
+                               Africa Software Architects (ASA), specializes in software, software development and digital transformation and it is a company that seeks to offer software solutions which will disrupt and automate the way organizations do business.
                                 The business firm is based in Sandton, South Africa. Our business helps to foster digital transformation to clients.
                             </p>
                         </div>
@@ -366,7 +366,7 @@
                                 <li>
                                     <a href="tel:+0123456789">
                                         <i class="far fa-phone"></i>
-                                        +27(11)202-5135
+                                        +27-(0)11-202-5135
                                     </a>
                                 </li>
                                 <li>
@@ -395,7 +395,7 @@
             <div class="footer-copyright">
                 <p class="copyright-text">
                     <span>Copyright@ <a href="#">Africa Software Architects </a> All Rights Reserved 2018</span>
-                    <span>Powerded By Dicol</span>
+                    <span></span>
                 </p>
                 <a href="#" class="back-to-top"><i class="far fa-angle-up"></i></a>
             </div>
