--- a/whoweare.html
+++ b/whoweare.html
@@ -142,7 +142,8 @@
                     <div class="skill-text">
 
                         <p>
-                            Africa Software Architects (ASA), is a software, software development and digital transformation company that seeks to offer software solutions which will disrupt and automate the way organizations do business. The business firm is based in Sandton, South Africa. Our business helps to foster digital transformation to clients
+                            Africa Software Architects (ASA), specializes in software, software development and digital transformation and it is a company that seeks to offer software solutions which will disrupt and automate the way organizations do business.
+                            The business firm is based in Sandton, South Africa. Our business helps to foster digital transformation to clients.
                         </p>
                         <p>
                             Africa Software Architects, was founded in 2018. We seek to offer our clients industry disruptive solutions which helps them grow their profitability, clientele base and their global reach. We help our clients in the specialty areas of software development, software architecture, web development, mobile app development, Artificial Intelligence, Robotics Process Automation, DevOps solutions, Digital Transformation Advisory, agile project management and business intelligence solutions.
@@ -265,7 +266,7 @@
                         <div class="section-title mb-40">
                             <span class="title-tag"><i class="fa fa-quote-right"></i> Creativity</span>
                             <p>
-                                The aggressive pursuit of new ideas is ideas is vital in helping us realize our grand vision. Great employees are fountains of new ideas which propel better products, services and processes.
+                                The aggressive pursuit of new ideas is vital in helping us realize our grand vision. Great employees are fountains of new ideas which propel better products, services and processes.
                             </p>
                         </div>
                     </div>
@@ -342,7 +343,7 @@
                                 <img src="assets/img/ASA_LogoFinal-01.png" alt="ASA">
                             </div>
                             <p>
-                                Africa Software Architects (ASA), is a software, software development and digital transformation company that seeks to offer software solutions which will disrupt and automate the way organizations do business.
+                                Africa Software Architects (ASA), specializes in software, software development and digital transformation and it is a company that seeks to offer software solutions which will disrupt and automate the way organizations do business.
                                 The business firm is based in Sandton, South Africa. Our business helps to foster digital transformation to clients.
                             </p>
                         </div>
@@ -384,7 +385,7 @@
                                 <li>
                                     <a href="tel:+0123456789">
                                         <i class="far fa-phone"></i>
-                                        +27(11)202-5135
+                                        +27-(0)11-202-5135
                                     </a>
                                 </li>
                                 <li>
@@ -413,7 +414,7 @@
             <div class="footer-copyright">
                 <p class="copyright-text">
                     <span>Copyright@ <a href="#">Africa Software Architects </a> All Rights Reserved 2018</span>
-                    <span>Powerded By Dicol</span>
+                    <span></span>
                 </p>
                 <a href="#" class="back-to-top"><i class="far fa-angle-up"></i></a>
             </div>
