--- a/services.html
+++ b/services.html
@@ -345,11 +345,7 @@
                                     <span class="quote-top">
                                         <i class="fas fa-quote-left"></i>
                                     </span>
-                                    On the other hand we denounce with righteou indg ation and dislike men who are so
-                                    beguiled and demoraliz ed by the charms of pleasure of the moment
-                                    <br>
-                                    Dislike men who are so beguiled and demoraliz worlds ed by the charms of pleasure of
-                                    the moment
+                                    Due to the nature of some of our work, some clients prefer to remain anonymous of their relationship with them. For any client testimonials, feel free to contact us and we will gladly provide you with  some latest references from our pool of clients
                                     <span class="quote-bottom">
                                         <i class="fas fa-quote-right"></i>
                                     </span>
@@ -361,12 +357,12 @@
                                     <img src="assets/img/testimonial/author.png" alt="img">
                                 </div>
                                 <div class="desc">
-                                    <h4>Richard E. Harrisona</h4>
-                                    <span>CEO & Founder</span>
+                                  <!--  <h4>Richard E. Harrisona</h4>
+                                    <span>CEO & Founder</span> -->
                                 </div>
                             </div>
                         </div>
-                        <div class="testimonial-item">
+                   <!--     <div class="testimonial-item">
                             <div class="content">
                                 <p>
                                     <span class="quote-top">
@@ -419,7 +415,7 @@
                                     <span>CEO & Founder</span>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                     <div class="testimonial-arrows row"></div>
                 </div>
@@ -513,7 +509,7 @@
             <div class="footer-copyright">
                 <p class="copyright-text">
                     <span>Copyright@ <a href="#">Africa Software Architects </a> All Rights Reserved 2018</span>
-                    <span>Powerded By Dicol</span>
+                    <span></span>
                 </p>
                 <a href="#" class="back-to-top"><i class="far fa-angle-up"></i></a>
             </div>
