--- a/solutions.html
+++ b/solutions.html
@@ -376,6 +376,33 @@
                                 </div>
                             </div>
                         </div>
+                        <!--<div class="testimonial-item">
+                            <div class="content">
+                                <p>
+                                    <span class="quote-top">
+                                        <i class="fas fa-quote-left"></i>
+                                    </span>
+                                    On the other hand we denounce with righteou indg ation and dislike men who are so
+                                    beguiled and demoraliz ed by the charms of pleasure of the moment
+                                    <br>
+                                    Dislike men who are so beguiled and demoraliz worlds ed by the charms of pleasure of
+                                    the moment
+                                    <span class="quote-bottom">
+                                        <i class="fas fa-quote-right"></i>
+                                    </span>
+                                </p>
+
+                            </div>
+                            <div class="author">
+                                <div class="thumb">
+                                    <img src="assets/img/testimonial/author.png" alt="img">
+                                </div>
+                                <div class="desc">
+                                    <h4>Richard E. Harrisona</h4>
+                                    <span>CEO & Founder</span>
+                                </div>
+                            </div>
+                        </div> 
                         <div class="testimonial-item">
                             <div class="content">
                                 <p>
@@ -402,34 +429,7 @@
                                     <span>CEO & Founder</span>
                                 </div>
                             </div>
-                        </div>
-                        <div class="testimonial-item">
-                            <div class="content">
-                                <p>
-                                    <span class="quote-top">
-                                        <i class="fas fa-quote-left"></i>
-                                    </span>
-                                    On the other hand we denounce with righteou indg ation and dislike men who are so
-                                    beguiled and demoraliz ed by the charms of pleasure of the moment
-                                    <br>
-                                    Dislike men who are so beguiled and demoraliz worlds ed by the charms of pleasure of
-                                    the moment
-                                    <span class="quote-bottom">
-                                        <i class="fas fa-quote-right"></i>
-                                    </span>
-                                </p>
-
-                            </div>
-                            <div class="author">
-                                <div class="thumb">
-                                    <img src="assets/img/testimonial/author.png" alt="img">
-                                </div>
-                                <div class="desc">
-                                    <h4>Richard E. Harrisona</h4>
-                                    <span>CEO & Founder</span>
-                                </div>
-                            </div>
-                        </div>
+                        </div> -->
                     </div>
                     <div class="testimonial-arrows row"></div>
                 </div>
@@ -452,7 +452,7 @@
                                 <img src="assets/img/ASA_LogoFinal-01.png" alt="ASA">
                             </div>
                             <p>
-                                Africa Software Architects (ASA), is a software, software development and digital transformation company that seeks to offer software solutions which will disrupt and automate the way organizations do business.
+                                Africa Software Architects (ASA), specializes in software, software development and digital transformation and it is a company that seeks to offer software solutions which will disrupt and automate the way organizations do business.
                                 The business firm is based in Sandton, South Africa. Our business helps to foster digital transformation to clients.
                             </p>
                         </div>
@@ -523,7 +523,7 @@
             <div class="footer-copyright">
                 <p class="copyright-text">
                     <span>Copyright@ <a href="#">Africa Software Architects </a> All Rights Reserved 2018</span>
-                    <span>Powerded By Dicol</span>
+                    <span></span>
                 </p>
                 <a href="#" class="back-to-top"><i class="far fa-angle-up"></i></a>
             </div>
