--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
                            <li> <i class="far fa-check"></i> Software Testing</li>
                            <li> <i class="far fa-check"></i> Cloud Services & Solutions</li>
                            <li> <i class="far fa-check"></i> Penetration Testing</li>
-                           <li> <i class="far fa-check"></i> Software Re-seller</li>
+                           <li> <i class="far fa-check"></i> Software Reseller</li>
                         </ul>
                         <a href="whoweare.html" class="main-btn">Know More</a>
                     </div>
