--- a/contact.html
+++ b/contact.html
@@ -178,7 +178,7 @@
                                 <li>
                                     <a href="tel:+0123456789">
                                         <i class="far fa-phone"></i>
-                                        +27(11)202-5135
+                                       +27-(0)11-202-5135
                                     </a>
                                 </li>
                                 <li>
@@ -207,7 +207,7 @@
             <div class="footer-copyright">
                 <p class="copyright-text">
                     <span>Copyright@ <a href="#">Africa Software Architects </a> All Rights Reserved 2018</span>
-                    <span>Powerded By Dicol</span>
+                    <span></span>
                 </p>
                 <a href="#" class="back-to-top"><i class="far fa-angle-up"></i></a>
             </div>
