Landing Page - Added Company Name
Added Company Name on animation on landing page

--- a/contact.html
+++ b/contact.html
@@ -149,7 +149,7 @@
     </section>
     <div class="container">
         <div class="section-title left-border">
-            <h2 class="title">Contact Us </h2><br />
+            <h2 class="title">Our Office Location </h2><br />
         </div>
         <!--Google map-->
         <div id="map-container-google-1" class="z-depth-1-half map-container" style="height: 500px;margin-top: 30px;">
