--- a/index.html
+++ b/index.html
@@ -115,6 +115,9 @@
                     <div class="row">
                         <div class="col-lg-10">
                             <div class="banner-content">
+                                <h1 data-animation="fadeInUp" data-delay="2s">
+                                    Africa Software Architects 
+                                </h1>
                                 <span class="promo-text" data-animation="fadeInDown" data-delay="0.3s">
                                     software company
                                 </span>
@@ -146,6 +149,9 @@
                     <div class="row">
                         <div class="col-lg-10">
                             <div class="banner-content">
+                                <h1 data-animation="fadeInUp" data-delay="2s">
+                                    Africa Software Architects 
+                                </h1>
                                 <span class="promo-text" data-animation="fadeInDown" data-delay="0.3s">
                                     software company
                                 </span>
@@ -177,6 +183,9 @@
                     <div class="row">
                         <div class="col-lg-10">
                             <div class="banner-content">
+                                <h1 data-animation="fadeInUp" data-delay="2s">
+                                    Africa Software Architects 
+                                </h1>
                                 <span class="promo-text" data-animation="fadeInDown" data-delay="0.3s">
                                     software company
                                 </span>
@@ -208,6 +217,9 @@
                     <div class="row">
                         <div class="col-lg-10">
                             <div class="banner-content">
+                                <h1 data-animation="fadeInUp" data-delay="2s">
+                                    Africa Software Architects 
+                                </h1>
                                 <span class="promo-text" data-animation="fadeInDown" data-delay="0.3s">
                                     software company
                                 </span>
