--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                     <div class="row">
                         <div class="col-lg-10">
                             <div class="banner-content">
-                                <h1 data-animation="fadeInUp" data-delay="2s">
+                                <h1 data-animation="fadeInUp" data-delay="2s" class=".heartBeat">
                                     Africa Software Architects 
                                 </h1>
                                 <span class="promo-text" data-animation="fadeInDown" data-delay="0.3s">
