slogan style change

--- a/index.html
+++ b/index.html
@@ -118,9 +118,9 @@
                                 <span class="promo-text" data-animation="fadeInDown" data-delay="0.3s">
                                     software company
                                 </span>
-                                <h1 data-animation="fadeInUp" data-delay="1s">
+                                <h2 data-animation="fadeInUp" data-delay="1s" style="color:white">
                                     Discover. Design. Develop. Deploy. Deliver. <i class="fa fa-rocket"></i>
-                                </h1>
+                                </h2>
                                 <ul class="btn-wrap">
                                     <li data-animation="fadeInLeft" data-delay="1.2s">
                                         <a href="solutions.html" class="main-btn main-btn-4">Our Solutions</a>
@@ -149,9 +149,9 @@
                                 <span class="promo-text" data-animation="fadeInDown" data-delay="0.3s">
                                     software company
                                 </span>
-                                <h1 data-animation="fadeInUp" data-delay="1s">
-                                    Discover. Design. Develop. Deploy. Deliver. <i class="fa fa-rocket" aria-hidden="true"></i>
-                                </h1>
+                                <h2 data-animation="fadeInUp" data-delay="1s" style="color:white">
+                                    Discover. Design. Develop. Deploy. Deliver. <i class="fa fa-rocket"></i>
+                                </h2>
                                 <ul class="btn-wrap">
                                     <li data-animation="fadeInLeft" data-delay="1.2s">
                                         <a href="#" class="main-btn main-btn-4">Our Solutions</a>
@@ -180,9 +180,9 @@
                                 <span class="promo-text" data-animation="fadeInDown" data-delay="0.3s">
                                     software company
                                 </span>
-                                <h1 data-animation="fadeInUp" data-delay="1s">
-                                    Discover. Design. Develop. Deploy. Deliver. <i class="fa fa-rocket" aria-hidden="true"></i>
-                                </h1>
+                                <h2 data-animation="fadeInUp" data-delay="1s" style="color:white">
+                                    Discover. Design. Develop. Deploy. Deliver. <i class="fa fa-rocket"></i>
+                                </h2>
                                 <ul class="btn-wrap">
                                     <li data-animation="fadeInLeft" data-delay="1.2s">
                                         <a href="#" class="main-btn main-btn-4">Our Solutions</a>
@@ -211,9 +211,9 @@
                                 <span class="promo-text" data-animation="fadeInDown" data-delay="0.3s">
                                     software company
                                 </span>
-                                <h1 data-animation="fadeInUp" data-delay="1s">
-                                    Discover. Design. Develop. Deploy. Deliver. <i class="fa fa-rocket" aria-hidden="true"></i>
-                                </h1>
+                                <h2 data-animation="fadeInUp" data-delay="1s" style="color:white">
+                                    Discover. Design. Develop. Deploy. Deliver. <i class="fa fa-rocket"></i>
+                                </h2>
                                 <ul class="btn-wrap">
                                     <li data-animation="fadeInLeft" data-delay="1.2s">
                                         <a href="#" class="main-btn main-btn-4">Our Solutions</a>
