--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
                 <span class="title-tag">Solutions</span>
                 <h2 class="
                 title">
-                    We Provide Solutions to <br> Governments, Private Sector, Public Sector, NGO's & Corporates Etc.
+                    We Provide Solutions to <br> Governments, Private Sector, Public Sector, NGO's & Corporates etc. across Africa
                 </h2>
             </div>
 
@@ -383,7 +383,7 @@
             <!-- Section Title -->
             <div class="section-title text-center both-border mb-30">
                 <span class="title-tag">Company Services</span>
-                <h2 class="title">We Provide IT Services to <br> Governments, Private Sector, Public Sector, NGO's & Corporates Etc.</h2>
+                <h2 class="title">We Provide IT Services to <br> Governments, Private Sector, Public Sector, NGO's & Corporates etc. across Africa</h2>
             </div>
             <!-- Services Boxes -->
             <div class="row service-boxes justify-content-center">
@@ -729,7 +729,7 @@
             <div class="footer-copyright">
                 <p class="copyright-text">
                     <span>Copyright@ <a href="#">Africa Software Architects </a> All Rights Reserved 2018</span>
-                    <span>Powerded By Dicol</span>
+                    <span></span>
                 </p>
                 <a href="#" class="back-to-top"><i class="far fa-angle-up"></i></a>
             </div>
