solutions -  videos alignment fix

--- a/solutions.html
+++ b/solutions.html
@@ -107,7 +107,7 @@
             </div>
             <br />
             <div class="row align-items-center justify-content-center">
-                <div class="col-lg-8 col-sm-6">
+                <div class="col-lg-5 col-sm-6">
                     <div class="skill-text">
                         <div class="section-title mb-40">
                             <span class="title-tag"><i class="fa fa-quote-right"></i> Company Solutions</span>
@@ -118,8 +118,8 @@
                         </p>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-10">
-                    <iframe src="https://www.youtube.com/embed/5_sZvOWrEjI?autoplay=0&mute=1" frameborder="0" allowfullscreen></iframe>
+                <div class="col-lg-5 col-md-10 embed-responsive embed-responsive-21by9">
+                    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/5_sZvOWrEjI?autoplay=0&mute=1" frameborder="0" allowfullscreen></iframe>
                 </div>
             </div>
             <br />
@@ -209,7 +209,7 @@
             </div>
             <br />
             <div class="row align-items-center justify-content-center">
-                <div class="col-lg-8 col-sm-6">
+                <div class="col-lg-5 col-sm-6">
                     <div class="skill-text">
                         <div class="section-title mb-40">
                             <span class="title-tag"><i class="fa fa-quote-right"></i> Company Solutions</span>
@@ -220,8 +220,8 @@
                         </p>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-12">
-                    <iframe src="https://www.youtube.com/embed/fj-kl5Xej8U?autoplay=0&mute=1" frameborder="0" allowfullscreen></iframe>
+                <div class="col-lg-5 col-md-12  embed-responsive embed-responsive-21by9">
+                    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/fj-kl5Xej8U?autoplay=0&mute=1" frameborder="0" allowfullscreen></iframe>
                     <!--<iframe class="responsive-iframe" src="https://www.youtube.com/embed/fj-kl5Xej8U?autoplay=0&mute=1" frameborder="0" allowfullscreen></iframe>-->
                 </div>
             </div>
